--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #eee;
+    background-color: #bb3f3f;
     font-family: 'Ubuntu';
 }
 
@@ -8,13 +8,19 @@ body {
     margin: 0 auto;
 }
 
+/* INDEX PAGE STYLES */
 .groups {
-    background-color: white;
+    background-color: #ffd5d5;
     border-radius: 10px;
     border: 1px solid black;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.171);
     overflow: hidden;
     margin-bottom: 100px;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .group-details {
@@ -29,7 +35,7 @@ body {
 
 .group-details:hover {
     transform: translate(-8px, -8px);
-    background-color: #ddd;
+    background-color: #ce6161;
 }
 
 .group-title {
@@ -60,4 +66,44 @@ img {
 
 .group-owner {
     color: #4e4e4e;
+}
+
+/* MESSAGES PAGE STYLES */
+.messages {
+    position: relative;
+    height: 400px;
+    overflow-y: scroll;
+    background-color: #ffd5d5;
+    border-radius: 10px;
+    border: 1px solid black;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.171);
+    padding: 25px;
+}
+
+.message {
+    background-color: #bb3f3f;
+    color: #fff;
+    display: inline-block;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.message-author {
+    background-color: #a13434;
+    padding: 5px 8px;
+}
+
+.message-text {
+    padding: 10px;
+}
+
+.new-message {
+    position: absolute;
+    bottom: 35px;
+    left: 25px;
+}
+
+.post-message {
+    position: fixed;
 }
