--- a/style.css
+++ b/style.css
@@ -107,3 +107,11 @@ img {
 .post-message {
     position: fixed;
 }
+
+/* HEADER STYLE */
+header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
