--- a/style/index.css
+++ b/style/index.css
@@ -9,6 +9,21 @@ body {
     margin: 0 auto;
 }
 
+/* Common style */
+.info-box {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    padding: 15px;
+    background-color: #ffca1c;
+}
+
+.info-delete {
+    color: #a87007;
+}
+
 /* INDEX PAGE STYLES */
 .groups-header {
     display: flex;
