--- a/style/index.css
+++ b/style/index.css
@@ -1,11 +1,17 @@
+html {
+    height: 100%;
+}
 body {
-    background-color: #bb3f3f;
+    min-height: 100%;
+    background-color: #cc8b8b;
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
     font-family: 'Ubuntu';
     margin: 0;
 }
 
 .container {
-    max-width: 1000px;
+    max-width: 600px;
     margin: 0 auto;
 }
 
@@ -89,11 +95,6 @@ body {
     transition: 500ms;
 }
 
-.group-details:hover {
-    transform: translate(-8px, -8px);
-    background-color: #ce6161;
-}
-
 .group-title {
     font-size: 20px;
     display: flex;
@@ -143,10 +144,11 @@ img {
     border: 1px solid black;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.171);
     padding: 25px;
+    padding-bottom: 50px;
 }
 
 .message {
-    background-color: #bb3f3f;
+    background-color: #3fbb58;
     max-width: 60%;
     color: #fff;
     display: inline-block;
@@ -155,18 +157,23 @@ img {
     overflow: hidden;
 }
 
+.message:last-child {
+    margin-bottom: 50px;
+}
+
 .message-author {
-    background-color: #a13434;
+    background-color: #399b5b;
     padding: 5px 8px;
 }
 
 .message-text {
     padding: 10px;
+    word-wrap: break-word;
 }
 
 .new-message {
     position: absolute;
-    bottom: 35px;
+    bottom: 55px;
     left: 25px;
 }
 
@@ -174,10 +181,35 @@ img {
     position: fixed;
 }
 
+#input-message {
+    height: 30px;
+    border: none;
+    padding: 3px 10px;
+    border-radius: 5px;
+}
+
+#send-message {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border: none;
+    border-radius: 50%;
+    background: #399b5b;
+    background-image: url("../send.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 20px 20px;
+}
+
+#send-message:hover {
+    cursor: pointer;
+    background-color: #2e7a48;
+}
+
 /* HEADER STYLE */
 header {
-    background-color: #8d2e2e;
-    color: #fca5a5;
+    background-color: #2e608d;
+    color: white;
 }
 
 header .container {
